<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
  <LinearLayout 
  	android:layout_width="match_parent"
   	android:layout_height="wrap_content"
   	android:orientation="horizontal">
   
    <Button 
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"/>
   
    <Button 
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>
    
	</LinearLayout>
    
	<EditText 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/title_text"
	    android:hint="@string/title"/>
	
	<EditText 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/category_text"
	    android:hint="@string/category"/>
	
	<EditText 
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent"
	    android:id="@+id/body_text"
	    android:hint="@string/body"/>
	
	
	
</LinearLayout>